
Changes to squid-2.5
	- Fixed forwarding/peer loop detection code (Brian Degenhardt) -
	  now a peer is ignored if it turns out to be us, rather than
	  committing suicide

Changes to Squid-2.4.DEVEL4 ():

	- Added --enable-auth-modules=... configure option
	- Improved ICP dead peer detection to also work when the workload
	  is low
	- Improved TCP dead peer detection and recovery
	- Squid is now a bit more persistent in trying to find a alive
	  parent when never_direct is used.
	- nonhierarchical_direct squid.conf directive to make non-ICP
	  peer selection behave a bit more like ICP selection with respect
	  to hierarchy.
	- Bugfix where netdb selection could override never_direct
	- ICP timeout selection now prefers to use parents only when
	  calculating the dynamic timeout to compensate for common RTT
	  differences between parents and siblings.
	- No longer starts to swap out objects which are known to be above
	  the maximum allowed size.
	- allow-miss cache_peer option disabling the use of "only-if-cached".
	  Meant to be used in conjunction with icp_hit_stale.
	- Delay pools tuned to allow large initial pool values
	- cachemgr filesystem space information changed to show useable space
	  rather than raw space, and platform support somewhat extended.
	- Logs destination IP in the hierarchy log tag when going direct.
	  (can be disabled by turning log_ip_on_direct off)
	- Async-IO on linux now makes proper use of mutexes. This fixes some
	  odd pthread segfaults on SMP Linux machines, at a slight performance
	  penalty.
	- %s can now be used in cache_swap_log and will be substituded with
	  the last path component of cache_dir.
	- no_cache is now a full ACL check without, allowing most ACL types
	  to be used.
	- The CONNECT method now obeys miss_access requirements
	- proxy_auth_regex and ident_regex ACL types
	- Fixed a StoreEntry memory leak during "dirty" rebuild
	- Helper processes no longer hold unrelated filedescriptors open